Being more idiomatic on optional parameters.